[gd_scene load_steps=10 format=2]

[ext_resource path="res://level_objects/powerups/Powerup.gd" type="Script" id=1]
[ext_resource path="res://level_objects/powerups/AnimatedTexture.gd" type="Script" id=2]
[ext_resource path="res://sounds/munch.wav" type="AudioStream" id=3]
[ext_resource path="res://sprites/Blueberry.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Hop"
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.12, 0.9 ), Vector2( 0.9, 1.12 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.5 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.4824 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( -200, 0, 0 )
initial_velocity = 61.22
angular_velocity = 8.38861e+06
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_curve = SubResource( 3 )
color = Color( 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.61814, 4.368 )

[node name="PowerupTemplate" type="Node2D" groups=[
"g_powerup",
]]
pause_mode = 2
script = ExtResource( 1 )
animated_texture = ExtResource( 5 )

[node name="AnimatedTexture" type="Sprite" parent="."]
texture = ExtResource( 5 )
offset = Vector2( 0, 0.4 )
hframes = 4
script = ExtResource( 2 )
particle_color = Color( 0, 0, 0, 1 )

[node name="SfxEat" type="AudioStreamPlayer2D" parent="AnimatedTexture"]
stream = ExtResource( 3 )
volume_db = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedTexture"]
autoplay = "Hop"
anims/Hop = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="AnimatedTexture"]
rotation = 4.71239
emitting = false
amount = 2
lifetime = 0.75
randomness = 1.0
process_material = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="AnimatedTexture"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedTexture/Area2D"]
shape = SubResource( 5 )

[node name="UIImage" type="Sprite" parent="."]
visible = false
[connection signal="eaten" from="AnimatedTexture" to="." method="_conn_on_powerup_eaten"]
[connection signal="finished" from="AnimatedTexture/SfxEat" to="AnimatedTexture" method="_conn_on_eat_sfx_finished"]
[connection signal="area_entered" from="AnimatedTexture/Area2D" to="AnimatedTexture" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="AnimatedTexture/Area2D" to="AnimatedTexture" method="_on_Area2D_area_exited"]
